--- a/public/css/style.css
+++ b/public/css/style.css
@@ -136,18 +136,15 @@ select option[disabled] {
 }
 
 .cars-container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
   gap: 1.5rem;
 }
 
 .car-card {
   display: flex;
   flex-direction: column;
-  flex: 1 1 calc((100% / 3) - 3rem);
   /* gap: 1rem; */
-  /* width: calc(100%/3); */
   border-radius: 6px;
   box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.1);
 }
@@ -165,7 +162,19 @@ select option[disabled] {
 
 .car-text {
   padding: 1rem;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
+.car-desc {
+  -webkit-box-orient: vertical;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: normal;
 }
 
 .services {
